--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -138,7 +138,7 @@
 
 
     <!-- </div> -->
-    <img class="mt-10" src="https://api.qrserver.com/v1/create-qr-code/?data=isaac%20is%20a%20nigga&amp;size=400x400"
+    <img class="mt-10" src="https://api.qrserver.com/v1/create-qr-code/?data=isaac%20is%20a%20nigga&size=400x400"
       alt="Isaac's GYATT" title="Important Information" />
 
     <!-- <a href="/view-checkin" class="text-white mt-10 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
