made workzone view look nicer

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,12 @@
     <div id="coordinates-ap"></div>
     <canvas id="Rectangle" width="1200" height="400" class="border border-black"></canvas>
 
-    <div class="mt-10" id="accordion-collapse" data-accordion="open" x-data="{inWorkzones: Object.entries(receivedData.inWorkzones)}">
+    <div class="mt-10" id="accordion-collapse" data-accordion="open"
+        x-data="{inWorkzones: Object.entries(receivedData.inWorkzones)}">
         <template x-for="(item, index) in inWorkzones">
             <div>
                 <h2 :id="`accordion-collapse-heading-${index+1}`">
-                    <button type="button"
-                    :class="index == 0 ? 'rounded-t-xl': ''"
+                    <button type="button" :class="index == 0 ? 'rounded-t-xl': ''"
                         class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3"
                         :data-accordion-target="`#accordion-collapse-body-${index+1}`" aria-expanded="true"
                         :aria-controls="`accordion-collapse-body-${index+1}`">
@@ -50,29 +50,106 @@
                         </svg>
                     </button>
                 </h2>
-                <div :id="`accordion-collapse-body-${index+1}`"  class="hidden" :aria-labelledby="`accordion-collapse-heading-${index+1}`">
-                    <div :class=" index+1 < inWorkzones.length ? 'border-b-0' : ''"  class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
-                        <template x-for="user in item[1]">
-                            <span x-text="user"></span>
-                        </template>
+                <div :id="`accordion-collapse-body-${index+1}`" class="hidden"
+                    :aria-labelledby="`accordion-collapse-heading-${index+1}`">
+                    <div :class=" index+1 < inWorkzones.length ? 'border-b-0' : ''"
+                        class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+                        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                            <thead
+                                class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                                <tr>
+                                    <th scope="col" class="p-4">
+                                        <div class="flex items-center">
+                                            <input id="checkbox-all-search" type="checkbox"
+                                                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                            <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                                        </div>
+                                    </th>
+                                    <th scope="col" class="px-6 py-3">
+                                        Name
+                                    </th>
+                                    <th scope="col" class="px-6 py-3">
+                                        Position
+                                    </th>
+                                    <th scope="col" class="px-6 py-3">
+                                        Status
+                                    </th>
+                                    <th scope="col" class="px-6 py-3">
+                                        Action
+                                    </th>
+                                </tr>
+                            </thead>
+                            <template x-for="person in item[1]">
+                                <!-- <span x-text="user"></span> -->
+
+                                <tbody x-data="{user: findUserIndex(receivedData.users, person)}">
+                                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 cursor-pointer"
+                                        @click="window.location.href='/view_employee'">
+                                        <td class="w-4 p-4">
+                                            <div class="flex items-center">
+                                                <input id="checkbox-table-search-1" type="checkbox"
+                                                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                                <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                            </div>
+                                        </td>
+                                        <th scope="row"
+                                            class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
+                                            <img class="w-10 h-10 rounded-full"
+                                                src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
+                                                alt="Jese image">
+                                            <div class="ps-3">
+                                                <div class="text-base font-semibold" x-text="user.name"></div>
+                                                <div class="font-normal text-gray-500" x-text="user.email"></div>
+                                            </div>
+                                        </th>
+                                        <td class="px-6 py-4" x-text="user.job">
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            <div class="flex items-center">
+                                                <template x-if="user.tracking">
+                                                    <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div>
+                                                </template>
+                                                <template x-if="!user.tracking">
+                                                    <div class="h-2.5 w-2.5 rounded-full bg-red-500 me-2"></div>
+                                                </template>
+                                                <p x-text="user.tracking ? 'Working' : 'Offline'"></p>
+                                            </div>
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            <a href="#"
+                                                class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit
+                                                user</a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </template>
+                        </table>
                     </div>
                 </div>
             </div>
         </template>
-    </div> 
+    </div>
 
-    
+
 
 
     <script>
+        // finds user index from the name
+        function findUserIndex(users, name) {
+            for (let i = 0; i < users.length; i++) {
+                if (users[i].name === name) {
+                    return users[i];
+                }
+            }
+            return -1; // Return -1 if the name is not found
+        }
         const receivedData = {{ data | tojson }};
-        // console.log(receivedData)
+        console.log(receivedData)
         // console.log(Object.entries(receivedData.inWorkzones))
 
         const workzones = receivedData.workzones
         // const workzones = Object.values(receivedData.workzones)
         const users = receivedData.users
-
         const socket = io();
 
         // Get canvas and context
@@ -93,6 +170,7 @@
         // Load image
         const img = new Image();
         img.src = 'https://i.pinimg.com/736x/49/65/20/496520b109ebd4c0ae16de6f481152c8.jpg';
+
 
         // Default map with image once it's loaded
         img.onload = function () {
@@ -289,6 +367,7 @@
             for (let i = 0; i < users.length; i++) {
                 const user = users[i]
                 const coords = user["current_coordinates"]
+                console.log(user.name, coords.x, coords.y, "white")
                 plot(user.name, coords.x, coords.y, "white");
             }
 
