temporary function just so i can see this working

--- a/templates/index.html
+++ b/templates/index.html
@@ -444,6 +444,7 @@
             apData = data.APs; // Do what u will with this ig
             receivedData.inWorkzones = data.inWorkzones
             console.log(receivedData.inWorkzones)
+            users = userInfo
 
             const coordinatesDiv = document.getElementById('coordinates');
             const apcoordinatesDiv = document.getElementById('coordinates-ap')
