i swear the lack of sleep is hitting me hard i forgot to put the smallest thing

--- a/templates/index.html
+++ b/templates/index.html
@@ -444,9 +444,9 @@
             apData = data.APs; // Do what u will with this ig
             receivedData.inWorkzones = data.inWorkzones
             console.log(receivedData.inWorkzones)
-            users = userInfo
+            users = data.userInfo
             console.log("USERS is now", users)
-            console.log("userinfo is now", userInfo)
+            console.log("userinfo is now", data.userInfo)
 
             const coordinatesDiv = document.getElementById('coordinates');
             const apcoordinatesDiv = document.getElementById('coordinates-ap')
