commit to test out whether popup works on phone

--- a/templates/index.html
+++ b/templates/index.html
@@ -266,7 +266,7 @@
     <script>
         // finds user index from the name
         function findUserIndex(users, name) {
-            console.log(users, name)
+            // console.log(users, name)
             for (let i = 0; i < users.length; i++) {
                 // console.log(users[i].name[0] , name)
                 if (users[i].name == name) {
