--- a/templates/view-tar.html
+++ b/templates/view-tar.html
@@ -203,18 +203,28 @@
 
                 <div class="w-full">
                     <div class="px-4 sm:px-0">
-                        <h3 class="text-3xl font-bold dark:text-white">Information</h3>
+                        <div class="flex items-center justify-between">
+                            <h3 class="text-3xl font-bold dark:text-white">Information</h3>
+                            <a href="/" class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
+                                <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                                View map
+                                </span>
+                            </a>
+                        </div>
                         <p class="mt-1 max-w-2xl text-sm leading-6 text-gray-500">Personal details and application.</p>
                     </div>
+                
                     <div class="mt-6 border-t border-gray-700">
                         <dl class="divide-y divide-gray-700">
                             {% for key, value in data.item.items() %}
+                            {% if key != 'workzones' %}
                             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
                                 <dt class="text-normal font-medium leading-6 text-white">{{ key[0].upper() + key[1:] if
                                     key != 'id' else 'ID' }}</dt>
                                 <dd class="mt-1 text-normal leading-6 text-gray-400 sm:col-span-2 sm:mt-0">{{ value }}
                                 </dd>
                             </div>
+                            {% endif %}
                             {% endfor %}
 
                             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
@@ -244,108 +254,31 @@
                 <h3 class="text-3xl font-bold dark:text-white mt-10">Workzones</h3>
 
                 <ul class="divide-y divide-gray-200 dark:divide-gray-700 mt-5">
-                    <li class="pb-3 sm:pb-4">
-                        <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                            <div class="flex-shrink-0">
-                                <img class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
-                                    alt="Neil image">
+                    {% for workzone in data.item.workzones %}
+                    <!-- <template x-for="workzone in data.item.workzones"> -->
+                        <li class="pb-3 sm:pb-4">
+                            <div class="flex items-center space-x-4 rtl:space-x-reverse mt-3">
+                                <div class="flex-shrink-0">
+                                    <img class="w-8 h-8 rounded-full"
+                                        src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
+                                        alt="Neil image">
+                                </div>
+                                <div class="flex-1 min-w-0">
+                                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                                        {{workzone}}
+                                    </p>
+                                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                                        example info 1
+                                    </p>
+                                </div>
+                                <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
+                                    <!-- $320 -->
+                                </div>
                             </div>
-                            <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                                    Neil Sims
-                                </p>
-                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    example info 1
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                $320
-                            </div>
-                        </div>
-                    </li>
-                    <li class="py-3 sm:py-4">
-                        <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                            <div class="flex-shrink-0">
-                                <img class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-3.jpg"
-                                    alt="Neil image">
-                            </div>
-                            <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                                    Bonnie Green
-                                </p>
-                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    example info 1
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                $3467
-                            </div>
-                        </div>
-                    </li>
-                    <li class="py-3 sm:py-4">
-                        <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                            <div class="flex-shrink-0">
-                                <img class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
-                                    alt="Neil image">
-                            </div>
-                            <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                                    Michael Gough
-                                </p>
-                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    example info 1
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                $67
-                            </div>
-                        </div>
-                    </li>
-                    <li class="py-3 sm:py-4">
-                        <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                            <div class="flex-shrink-0">
-                                <img class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
-                                    alt="Neil image">
-                            </div>
-                            <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                                    Thomas Lean
-                                </p>
-                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    example info 1
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                $2367
-                            </div>
-                        </div>
-                    </li>
-                    <li class="pt-3 pb-0 sm:pt-4">
-                        <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                            <div class="flex-shrink-0">
-                                <img class="w-8 h-8 rounded-full"
-                                    src="https://flowbite.com/docs/images/people/profile-picture-4.jpg"
-                                    alt="Neil image">
-                            </div>
-                            <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                                    Lana Byrd
-                                </p>
-                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                    example info 1
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                $367
-                            </div>
-                        </div>
-                    </li>
+                        </li>
+                    <!-- </template> -->
+                    {% endfor %}
                 </ul>
-
 
             </div>
             <div x-data="$store.data" id="right" class="w-2/3">
