--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -14,7 +14,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
-<body class="dark bg-gray-900">
+<body class="dark bg-gray-900" x-data="$store">
   <aside id="default-sidebar"
     class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
     aria-label="Sidebar">
@@ -104,8 +104,9 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="m1 9 4-4-4-4" />
             </svg>
-            <a href="view-tar"
-              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">SBST123456789A</a>
+            <a :href="`/${id}`"
+            x-text="id"
+              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"></a>
 
           </div>
         </li>
@@ -124,41 +125,49 @@
         </li>
 
 
-  </div>
-  </li>
-  </ol>
-  </nav>
-  <main class="dark flex flex-col items-center ms-64">
-    <!-- <div class="flex flex-row gap-5 items-center mt-7 justify-between"> -->
-    <!-- <h3 class="text-3xl font-bold dark:text-white mt-5">Scan QR code</h3> -->
-    <!-- <h2 class="text-4xl font-bold dark:text-white mt-10">Scan QR Code</h2> -->
-    <h1 class="text-5xl font-bold dark:text-white mt-10">Scan QR Code</h1>
-    <!-- <a href="/view-checkin" class="dark:text-white mt-4 dark:hover:text-red-500 dark:hover:underline" >Check-in status</a> -->
-    <p class="font-normal text-gray-700 dark:text-gray-400 mt-4">Scan the QR code to check in to SBST123456789A.</p>
+        <!-- </div>
+  </li> -->
+      </ol>
+    </nav>
+    <main class="dark flex flex-col items-center">
+      <!-- <div class="flex flex-row gap-5 items-center mt-7 justify-between"> -->
+      <!-- <h3 class="text-3xl font-bold dark:text-white mt-5">Scan QR code</h3> -->
+      <!-- <h2 class="text-4xl font-bold dark:text-white mt-10">Scan QR Code</h2> -->
+      <h1 class="text-5xl font-bold dark:text-white mt-10">Scan QR Code</h1>
+      <!-- <a href="/view-checkin" class="dark:text-white mt-4 dark:hover:text-red-500 dark:hover:underline" >Check-in status</a> -->
+      <p class="font-normal text-gray-700 dark:text-gray-400 mt-4" x-text="`Scan the QR code to check in to ${id}.`">.</p>
+      <a href="view-checkin"
+      class="mt-10 px-6 py-3.5 text-base font-medium text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 absolute top-14 right-10">
+        View Check-ins
+        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+          viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 5h12m0 0L9 1m4 4L9 9" />
+        </svg>
+      </a>
+      <!-- </div> -->
+      <img class="mt-10" :src="`https://api.qrserver.com/v1/create-qr-code/?data=${id}&size=500x500`"
+        alt="Isaac's GYATT" :title="`${id}`" />
 
-
-    <!-- </div> -->
-    <img class="mt-10" src="https://api.qrserver.com/v1/create-qr-code/?data=SBST123456789A&size=400x400"
-      alt="Isaac's GYATT" title="Important Information" />
-
-    <!-- <a href="/view-checkin" class="text-white mt-10 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+      <!-- <a href="/view-checkin" class="text-white mt-10 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             View current check-in status
             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
             </svg>
           </a> -->
 
-    <a href="/view-checkin"
-      class="mt-10 px-6 py-3.5 text-base font-medium text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-      View Check-ins
-      <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-        viewBox="0 0 14 10">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M1 5h12m0 0L9 1m4 4L9 9" />
-      </svg>
-    </a>
-  </main>
+      
+    </main>
   </div>
 </body>
 
 </html>
+
+<script>
+  let taa = {{ data | tojson }};
+
+  document.addEventListener('alpine:init', () => {
+    Alpine.store('id', taa)
+  })
+
+</script>
