--- a/templates/employees.html
+++ b/templates/employees.html
@@ -202,9 +202,9 @@
                         <th scope="col" class="px-6 py-3">
                             Status
                         </th>
-                        <th scope="col" class="px-6 py-3">
+                        <!-- <th scope="col" class="px-6 py-3">
                             Action
-                        </th>
+                        </th> -->
                     </tr>
                 </thead>
                 <tbody>
@@ -243,10 +243,10 @@
                                     <p x-text="user.tracking ? 'Working' : 'Offline'"></p>
                                 </div>
                             </td>
-                            <td class="px-6 py-4">
+                            <!-- <td class="px-6 py-4">
                                 <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit
                                     user</a>
-                            </td>
+                            </td> -->
                         </tr>
                     </template>
                 </tbody>
