--- a/templates/view-tars.html
+++ b/templates/view-tars.html
@@ -183,9 +183,9 @@
                         <th scope="col" class="px-6 py-3">
                             Status
                         </th>
-                        <th scope="col" class="px-6 py-3">
+                        <!-- <th scope="col" class="px-6 py-3">
                             Action
-                        </th>
+                        </th> -->
                     </tr>
                 </thead>
                 <tbody>
@@ -240,9 +240,9 @@
                                     <p x-text="item.status"></p>
                                 </div>
                             </td>
-                            <td class="px-6 py-4">
+                            <!-- <td class="px-6 py-4">
                                 <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit TAA</a>
-                            </td>
+                            </td> -->
                         </tr>
                     </template>
                 </tbody>
