--- a/templates/view-tar.html
+++ b/templates/view-tar.html
@@ -116,7 +116,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="m1 9 4-4-4-4" />
                         </svg>
-                        <a href="#"
+                        <a href="#" x-text="`${item.id}`"
                             class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">SBST123456789A</a>
                     </div>
                 </li>
