updated view_employee and fixed an error on frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -503,8 +503,8 @@
             // console.log("userinfo is now", data.userInfo)
             // console.log("receivedDatauserinfo is now", receivedData.userInfo)
 
-            // const coordinatesDiv = document.getElementById('coordinates');
-            // const apcoordinatesDiv = document.getElementById('coordinates-ap')
+            const coordinatesDiv = document.getElementById('coordinates');
+            const apcoordinatesDiv = document.getElementById('coordinates-ap')
             coordinatesDiv.innerHTML = ''; // Clear previous coordinates
             apcoordinatesDiv.innerHTML = ''; // Clear previous coordinates
 
