--- a/templates/view_employee.html
+++ b/templates/view_employee.html
@@ -150,7 +150,7 @@
             </div>
 
             <div class="flex items-center">
-                <img class="w-24 h-24 rounded-full mt-6 mb-6" src="https://via.placeholder.com/150" alt="Profile Picture">
+                <img class="w-24 h-24 rounded-full mt-6 mb-6" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="Profile Picture">
              </div>
 
             <div class="mt-6 border-t border-gray-700">
