added dynamic routing for employees throughout the app, but taas arent associated with employees yet

--- a/templates/view_checkin.html
+++ b/templates/view_checkin.html
@@ -187,8 +187,8 @@
                 <tbody x-data='$store.data'>
                     <template x-for="user in listItems">
 
-                        <tr
-                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <tr @click="window.location.href = `/employees/${user.name}`"
+                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 cursor-pointer">
                             <td class="w-4 p-4">
                                 <div class="flex items-center">
                                     <input id="checkbox-table-search-1" type="checkbox"
