--- a/templates/index.html
+++ b/templates/index.html
@@ -195,7 +195,7 @@
                                         }}">
                                         <tr :class="!$store.receivedData.data.correctWorkzone.includes(item[0]) ? 'dark:bg-red-950': 'dark:bg-gray-800'"
                                             class="bg-white border-b  dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 cursor-pointer"
-                                            @click="window.location.href='/view_employee'">
+                                            @click="window.location.href=`employees/${user.name}`">
                                             <td class="w-4 p-4">
                                                 <div class="flex items-center">
                                                     <input id="checkbox-table-search-1" type="checkbox"
@@ -452,10 +452,11 @@
         }
 
         function plotPoints(received, coordinatesDiv, apcoordinatesDiv, ctx) {
-            console.log(received)
+            // console.log(received.Users)
             userData = received.Users;
             apData = received.APs; // Do what u will with this ig
 
+            console.log(userData)
             Object.entries(userData).forEach(([name, coords], index) => {
                 coordinatesDiv.innerHTML += `<p>${name}: Current X: ${coords.x}, Current Y: ${coords.y}, Radius: ${coords.radius}</p>`;
 
