--- a/templates/view-tar.html
+++ b/templates/view-tar.html
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="/employees"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 16">
@@ -301,7 +301,7 @@
                             <template x-for="detail in activity.details">
 
                                 <li>
-                                    <a href="#" class="items-center block p-3 sm:flex hover:bg-gray-100 dark:hover:bg-gray-700">
+                                    <a :href="`employees/${detail.name}`" class="items-center block p-3 sm:flex hover:bg-gray-100 dark:hover:bg-gray-700">
                                         <img class="w-12 h-12 mb-3 me-3 rounded-full sm:mb-0"
                                             :src="detail.profile_image"
                                             alt="Jese Leos image" />
