--- a/templates/view_employee.html
+++ b/templates/view_employee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View TAA</title>
+    <title>View Employee</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" /> -->
     <!-- TAILWIND STYLES -->
     <link href="../static/dist/css/output.css" rel="stylesheet">
@@ -129,7 +129,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="m1 9 4-4-4-4" />
                         </svg>
-                        <a href="/view_employee"
+                        <a href="#"
                             class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">View Employee</a>
 
                         <div class="flex items-center">
@@ -158,7 +158,23 @@
                     {% for key, value in userinfo.items() %}
                     <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-2 sm:px-0">
                         <dt class="text-normal font-medium leading-6 text-white">{{ key }}</dt>
-                        <dd class="mt-1 text-normal leading-6 text-gray-400 sm:col-span-2 sm:mt-0">{{ value }}
+                        <dd class="mt-1 text-normal leading-6 text-gray-400 sm:col-span-2 sm:mt-0 flex flex-row items-center gap-2">
+                            <!-- For the tracking field -->
+                            {% if key == 'Tracking' %}
+                                <div>
+                                    {{ "Working" if value else "Offline" }}
+                                </div>
+                                {% if not value %}
+                                <div class="h-2 w-2 rounded-full bg-red-500 me-2"></div>
+                                {% else %}
+                                <div class="h-2 w-2 rounded-full bg-green-500 me-2"></div>
+                                {% endif %}    
+                            {% else %}    
+                                <div>
+                                    <!-- All other fields -->
+                                    {{ value }}
+                                </div>
+                            {% endif %}
                         </dd>
                     </div>
                     {% endfor %}
@@ -180,3 +196,14 @@
 </body>
 
 </html>
+
+<script>
+    const receivedData = {{ userinfo | tojson }};
+
+    document.addEventListener('alpine:init', () => {
+            
+        Alpine.store('receivedData', {
+            data: receivedData,
+        })
+    })
+</script>
